apps/be/users-be-old/deployments/db/postgres-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-be-postgres-external
  namespace: skillsier
spec:
  type: NodePort
  selector:
    app: users-be-postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
      nodePort: 30432  # open this only to your IP on the VPS firewall
