apps/be/users-be-old/deployments/db/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-be-postgres
  namespace: skillsier
spec:
  type: ClusterIP
  selector:
    app: users-be-postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
